--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Study Quizmaker</string>
     <string name="subject">Subject</string>
     <string name="description">Description</string>
+    <string name="subject_name">Subject name</string>
+    <string name="subject_description">Subject description</string>
+    <string name="add">Add</string>
+    <string name="subject_name_exists_already">Subject name exists already</string>
 </resources>
