--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="subject_description">Subject description</string>
     <string name="add">Add</string>
     <string name="subject_name_exists_already">Subject name exists already</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
