Added subject modification

--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -6,7 +6,7 @@
     <string name="subject_name">Nombre de la Asignatura</string>
     <string name="subject_description">Descripción de la Asignatura</string>
     <string name="add">Agregar</string>
-    <string name="subject_name_exists_already">El nombre de la asignatura ya existe</string>
+    <string name="msg_err_subject_name_exists_already">El nombre de la asignatura ya existe</string>
     <string name="delete">Borrar</string>
     <string name="edit">Editar</string>
     <string name="delete_confirmation">Confirmación de borrado</string>
@@ -14,4 +14,5 @@
     <string name="name">Nombre</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
+    <string name="update">Actualizar</string>
 </resources>
