--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="subject_name">Subject name</string>
     <string name="subject_description">Subject description</string>
     <string name="add">Add</string>
-    <string name="subject_name_exists_already">Subject name exists already</string>
+    <string name="msg_err_subject_name_exists_already">Subject name exists already</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="delete_confirmation">Delete confirmation</string>
@@ -13,4 +13,5 @@
     <string name="name">Name</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="update">Update</string>
 </resources>
