--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="subject_name">Subject name</string>
     <string name="subject_description">Subject description</string>
     <string name="add">Add</string>
-    <string name="msg_err_subject_name_exists_already">Subject name exists already</string>
+    <string name="msg_err_subject_name_exists_already">There is another subject with the same name</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="delete_confirmation">Delete confirmation</string>
@@ -17,4 +17,7 @@
     <string name="topics">Topics</string>
     <string name="topic">Topic</string>
     <string name="subjects">Subjects</string>
+    <string name="topic_name">Topic name</string>
+    <string name="topic_description">Topic description</string>
+    <string name="msg_err_topic_name_exists_already">There is another topic with the same name</string>
 </resources>
