--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="topic_name">Topic name</string>
     <string name="topic_description">Topic description</string>
     <string name="msg_err_topic_name_exists_already">There is another topic with the same name</string>
+    <string name="msg_delete_confirmation_topic">Are you sure you want to delete the following topic?</string>
 </resources>
