--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -22,4 +22,6 @@
     <string name="msg_err_topic_name_exists_already">Ya existe otro tema con ese nombre</string>
     <string name="msg_err_subject_name_exists_already">Ya existe otra asignatura con ese nombre</string>
     <string name="msg_delete_confirmation_topic">¿Seguro de que desea borrar el siguiente tema?</string>
+    <string name="tests">Tests</string>
+    <string name="test">Test</string>
 </resources>
