Can now add tests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="msg_delete_confirmation_topic">Are you sure you want to delete the following topic?</string>
     <string name="tests">Tests</string>
     <string name="test">Test</string>
+    <string name="test_name">Test name</string>
+    <string name="test_description">Test description</string>
+    <string name="msg_err_test_name_exists_already">There is another test with the same name</string>
 </resources>
