--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -24,4 +24,7 @@
     <string name="msg_delete_confirmation_topic">¿Seguro de que desea borrar el siguiente tema?</string>
     <string name="tests">Tests</string>
     <string name="test">Test</string>
+    <string name="test_name">Nombre del test</string>
+    <string name="test_description">Descripción del test</string>
+    <string name="msg_err_test_name_exists_already">Ya existe otro test con ese nombre</string>
 </resources>
