--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -27,4 +27,5 @@
     <string name="test_name">Nombre del test</string>
     <string name="test_description">Descripción del test</string>
     <string name="msg_err_test_name_exists_already">Ya existe otro test con ese nombre</string>
+    <string name="msg_delete_confirmation_test">¿Seguro de que desea borrar el siguiente test?</string>
 </resources>
