--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="test_name">Test name</string>
     <string name="test_description">Test description</string>
     <string name="msg_err_test_name_exists_already">There is another test with the same name</string>
+    <string name="msg_delete_confirmation_test">Are you sure you want to delete the following test?</string>
 </resources>
