Counting question per type and sum total on Test Panel

--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -33,4 +33,7 @@
     <string name="start">Empezar</string>
     <string name="amount_of_questions">Cantidad de preguntas</string>
     <string name="questions">Preguntas</string>
+    <string name="questions_multiple_choice">Múltiple opción</string>
+    <string name="questions_simple">Preguntas simples</string>
+    <string name="questions_true_or_false">Verdadero o falso</string>
 </resources>
