Can now view simple questions

--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -36,4 +36,5 @@
     <string name="questions_multiple_choice">Múltiple opción</string>
     <string name="questions_simple">Preguntas simples</string>
     <string name="questions_true_or_false">Verdadero o falso</string>
+    <string name="score_total">"Puntaje: "</string>
 </resources>
