--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="questions_simple">Simple questions</string>
     <string name="questions_true_or_false">True or false</string>
     <string name="score_total">"Score: "</string>
+    <string name="answer">Answer</string>
+    <string name="title">Title</string>
+    <string name="msg_err_questionsimple_title_exists_already">There is another simple question with the same title</string>
+    <string name="max_score">Maximum score of other questions</string>
+    <string name="score">Score</string>
 </resources>
