--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,12 @@
     <string name="score">Score</string>
     <string name="msg_delete_confirmation_question">Are you sure you want to delete the following question?</string>
     <string name="msg_available_in_future_version">Will be available on a future version. Wait for release</string>
+    <string name="simple_question">Simple question</string>
+    <string name="next_question">Next question</string>
+    <string name="finish">Finish</string>
+    <string name="solved">Solved</string>
+    <string name="question">Question</string>
+    <string name="view_answer">View answer</string>
+    <string name="hide_answer">Hide answer</string>
+    <string name="answer_score">Answer score</string>
 </resources>
