Can now transition between questions
Can now transition between questions and added animations for backward and forward transition.

--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -58,4 +58,9 @@
     <string name="test_results">Resultados del test</string>
     <string name="scored">Puntuación alcanzada</string>
     <string name="questions_answered">Preguntas respondidas</string>
+    <string name="pick_a_question">Eliga una pregunta</string>
+    <string name="answered">Respondida</string>
+    <string name="unanswered">No respondida</string>
+    <string name="not_active">No activa</string>
+    <string name="pick">Elegir</string>
 </resources>
