--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="pick">Pick</string>
     <string name="finish_test">Finish test</string>
     <string name="msg_confirmation_finish_test">Are you sure you want to end this test?</string>
+    <string name="test_runs">Test runs</string>
 </resources>
