--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -66,4 +66,5 @@
     <string name="finish_test">Terminar test</string>
     <string name="msg_confirmation_finish_test">¿Seguro de que desea terminar el test?</string>
     <string name="test_runs">Corridas de tests</string>
+    <string name="msg_delete_confirmation_testrun">¿Seguro de que desea borrar la corrida seleccionada?</string>
 </resources>
