--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="finish_test">Finish test</string>
     <string name="msg_confirmation_finish_test">Are you sure you want to end this test?</string>
     <string name="test_runs">Test runs</string>
+    <string name="msg_delete_confirmation_testrun">Are you sure you want to delete the selected run?</string>
 </resources>
