--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="is_true">True</string>
     <string name="right_answer">Right answer</string>
     <string name="confirm_scores">Confirm scores</string>
+    <string name="answered_question">Answered</string>
 </resources>
