--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -79,4 +79,5 @@
     <string name="answered_question">Respondido</string>
     <string name="add_answer_option">Agregar opción de pregunta</string>
     <string name="add_option">Agregar opción</string>
+    <string name="clear_all_checks">Desmarcar todos</string>
 </resources>
