--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="add_answer_option">Add answer option</string>
     <string name="add_option">Add option</string>
     <string name="clear_all_checks">Clear all</string>
+    <string name="error">Error</string>
 </resources>
