Can now add and update subject icon colors

--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -84,6 +84,7 @@
     <string name="response_question_mc">Respuesta múltiple opción</string>
     <string name="response_question_single">Respuesta de pregunta simple</string>
     <string name="response_question_tf">Respuesta de pregunta verdadero o falso</string>
+    <string name="color_gray">Gris</string>
     <string name="color_red">Rojo</string>
     <string name="color_orange">Naranja</string>
     <string name="color_yellow">Amarillo</string>
@@ -94,4 +95,5 @@
     <string name="color_violet">Violeta</string>
     <string name="color_pink">Rosado</string>
     <string name="color_fucsia">Fucsia</string>
+    <string name="icon_color">Color del ícono</string>
 </resources>
