Setting up DB Room data

--- a/app/src/main/res/values-es-rUY/strings.xml
+++ b/app/src/main/res/values-es-rUY/strings.xml
@@ -36,6 +36,7 @@
     <string name="questions_multiple_choice">Múltiple opción</string>
     <string name="questions_simple">Preguntas simples</string>
     <string name="questions_true_or_false">Verdadero o falso</string>
+    <string name="questions_multiple_options">Múltiples opciones</string>
     <string name="score_total">"Puntaje: "</string>
     <string name="answer">Respuesta</string>
     <string name="title">Título</string>
