--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="questions_multiple_choice">Multiple choice</string>
     <string name="questions_simple">Simple questions</string>
     <string name="questions_true_or_false">True or false</string>
+    <string name="questions_multiple_options">Multiple options</string>
     <string name="score_total">"Score: "</string>
     <string name="answer">Answer</string>
     <string name="title">Title</string>
